--- a/.github/workflows/make_release_pull_request.yml
+++ b/.github/workflows/make_release_pull_request.yml
@@ -90,7 +90,7 @@ jobs:
         id: translate_comment_url
         uses: actions/github-script@v6
         env:
-          PR_URL: ${{ steps.make_pull_request.outpts.release_pr_url }}
+          PR_URL: ${{ steps.make_pull_request.outputs.release_pr_url }}
         with:
           script: |
             const {PR_URL} = process.env
