--- a/.github/workflows/merge_main.yml
+++ b/.github/workflows/merge_main.yml
@@ -8,6 +8,7 @@ jobs:
   dist_play_store:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
