--- a/.github/workflows/merge_main.yml
+++ b/.github/workflows/merge_main.yml
@@ -49,14 +49,18 @@ jobs:
           java-version: '11'
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-      - run: |
+      - id: failure_step
+        run: |
           # fail
           sl
+      - run: |
+          echo "${{ steps.failure_step }}"
+          echo "${{ toJson(steps.failure_step) }}"
       - name: Check-Runs
         uses: octokit/request-action@v2.x
         id: create_check_run
         env:
-          conclusion: ${{ (failure() && "failure") || "success" }}
+          conclusion: "success"
         with:
           route: POST /repos/{owner}/{repo}/check-runs
           owner: ${{ github.repository_owner }}
