--- a/.github/workflows/merge_main.yml
+++ b/.github/workflows/merge_main.yml
@@ -8,6 +8,8 @@ jobs:
   dist_play_store:
     runs-on: ubuntu-latest
     steps:
+      - run: |
+        echo ${{ github.hoge.hoge || 'ok' }}
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v2
         with:
