--- a/.github/workflows/comment__main_pr.yml
+++ b/.github/workflows/comment__main_pr.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo `${{ toJSON(github) }}`
+          echo "${{ toJSON(github) }}"
       - name: comment
         uses: octokit/request-action@v2.x
         with:
