--- a/.github/workflows/make_release_pull_request.yml
+++ b/.github/workflows/make_release_pull_request.yml
@@ -58,7 +58,9 @@ jobs:
 
             core.setOutput("version_info",  fs.readFileSync("release_info/version.json", "utf8"));
       - run: |
-          echo `${{ toJSON(github) }}`
+          echo "${GITHUB_CONTEXT}"
+        env:
+          GITHUB_CONTEXT: ${{ toJSON(github) }}
       - name: "make pull request"
         id: make_pull_request
         env:
