--- a/.github/workflows/comment__main_pr.yml
+++ b/.github/workflows/comment__main_pr.yml
@@ -14,7 +14,7 @@ jobs:
       - name: comment
         uses: octokit/request-action@v2.x
         with:
-          route: POST ${{ github.event.repository.issue_comment_url }}
+          route: POST ${{ github.event.pull_request.review_comment }}
           body: ${{ toJSON(env.REQUEST_BODY) }}
         env:
           REQUEST_BODY: |
