--- a/.github/workflows/comment__main_pr.yml
+++ b/.github/workflows/comment__main_pr.yml
@@ -4,7 +4,7 @@ on:
 name: Comment main PR
 jobs:
   comment:
-    permissions: read-all|write-all
+    permissions: write-all
     name: Assign author to PR
     runs-on: ubuntu-latest
     steps:
