--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -31,7 +31,11 @@ jobs:
       - name: print
         if: ${{ failure() }}
         run: |
+          start=$(date +%s)
           echo ${{ toJson(steps.vars.outputs.annotations) }}
+          end=$(date +%s)
+          
+          echo $end - $start
           echo "====="
           echo ${{ steps.vars.outputs.annotations }}
           echo "===sha==="
