--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -29,7 +29,15 @@ jobs:
           result=$(.github/workflows/script/diff_annotations.main.kts)
           end=$(date +%s)
           echo $result
+          
+          
+          start=$(date +%s)
+          result=$(.github/workflows/script/diff_annotations.main.kts)
+          end=$(date +%s)
+          
+          echo "second time
           echo $end - $start
+          
           echo ::set-output name=annotations::$result
       - name: print
         if: ${{ failure() }}
