--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -31,6 +31,9 @@ jobs:
           echo $result
           echo ::set-output name=annotations::$result
           
+          echo "first time"
+          echo $end - $start
+          
           start=$(date +%s)
           result=$(.github/workflows/script/diff_annotations.main.kts)
           end=$(date +%s)
