--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -23,8 +23,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: ktlintFormat
-      - name: ==================test
-        uses: matsudamper/actions_test/.github/workflows/exec_kotlin_script.yml@test
+      - uses: ./.github/actions/exec_kotlin_script
         with:
           cache_dir: "${{ env.KOTLIN_MAIN_KTS_COMPILED_SCRIPTS_CACHE_DIR }}"
           filename: ".github/workflows/script/diff_annotations.main.kts"
