--- a/.github/workflows/call_ktlint.yml
+++ b/.github/workflows/call_ktlint.yml
@@ -25,7 +25,7 @@ jobs:
           arguments: ktlintFormat
       - name: =========================test
         if: ${{ failure() }}
-        uses: .github/actions/exec_kotlin_script
+        uses: ./.github/actions/exec_kotlin_script
         with:
           cache_dir: "${{ env.KOTLIN_MAIN_KTS_COMPILED_SCRIPTS_CACHE_DIR }}"
           filename: ".github/workflows/script/diff_annotations.main.kts"
