--- a/.github/actions/exec_kotlin_script/action.yml
+++ b/.github/actions/exec_kotlin_script/action.yml
@@ -12,7 +12,7 @@ inputs:
 outputs:
   result:
     description: "kotlin script result"
-    value: ${{ jobs.reusable_workflow_job.outputs.result }}
+    value: ${{ steps.exec.outputs.result }}
 
 runs:
   using: composite
