--- a/.github/actions/exec_kotlin_script/action.yml
+++ b/.github/actions/exec_kotlin_script/action.yml
@@ -29,7 +29,7 @@ runs:
       id: exec
       shell: bash
       run: |
-        RESULT=$(${{ filename }})
+        RESULT=$(${{ inputs.filename }})
         RESULT="${MY_STRING//'%'/'%25'}"
         RESULT="${MY_STRING//$'\n'/'%0A'}"
         RESULT="${MY_STRING//$'\r'/'%0D'}"
